Changes in version 0.0.2 - UNRELEASED
 - Add a man page for obfs4proxy.

Changes in version 0.0.1 - 2014-09-03
 - Initial release.